tests/struct_field_sep_missing_bad.stderr
tests/struct_field_sep_missing_bad.hop:3:11: error: HOP1004: unexpected token
